# agentops

./: .gitattributes  .gitignore  .last_run  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  index.html  launch.json  logs.txt  main.py  marketplace.json  mkdocs.yml  plugin.json  pyproject.toml  requirements-docs.txt  styles.css
.claude-plugin/: marketplace.json
.github/: code-quality-py.instructions.md  copilot-instructions.md  dependabot.yml
.local/: cut-release.ps1  release.ps1  staging.ps1
bundles/: index.html
ci-github-actions/: index.html
concepts/: index.html
docs/: SPEC.md  analysis-issue-51-cicd-field-insights.md  analysis-issue-51-two-track.md  bundles.md  ci-github-actions.md  concepts.md  doctor-checks.md  doctor-explained.md  e2e-live-architecture.md  e2e-live-setup.md  evaluation.md  foundry-evaluation-sdk-built-in-evaluators.md  foundry-ops-workbook-kql.md  foundry-ops-workbook.md  how-it-works.md  index.md  observe.md  operate.md  own.md  release-process.md  retrieval-optimization.md  run-yaml-schema.md  ship.md  styles.css  telemetry.md  tutorial-agent-doctor.md  tutorial-agent-watchdog.md  tutorial-agent-workflow.md  tutorial-ai-toolkit-integration.md  tutorial-baseline-comparison.md  tutorial-basic-foundry-agent.md  tutorial-conversational-agent.md  tutorial-copilot-skills.md  tutorial-end-to-end.md  tutorial-hosted-agent-quickstart.md  tutorial-hosted-agent.md  tutorial-http-agent.md  tutorial-model-direct.md  tutorial-production-readiness.md  tutorial-prompt-agent-quickstart.md  (+5 more)
doctor-checks/: index.html
doctor-explained/: index.html
e2e-live-architecture/: index.html
e2e-live-setup/: index.html
evaluation/: index.html
foundry-evaluation-sdk-built-in-evaluators/: index.html
foundry-ops-workbook/: index.html
foundry-ops-workbook-kql/: index.html
how-it-works/: index.html
observe/: index.html
operate/: index.html
own/: index.html
release-process/: index.html
retrieval-optimization/: index.html
scripts/: create_support_agent.py  cut-release.ps1  cut-release.sh  e2e_aggregate_summary.py  e2e_demo.py  e2e_hosted_agent.py  e2e_make_transcript.py  e2e_render_config.py  release.ps1  release.sh  staging.ps1  staging.sh  sync-skills.ps1  sync-skills.sh  verify_tombstones.py
search/: search_index.json
ship/: index.html
tests/: TESTING.md
tombstones/pypi/: README.md  pyproject.toml
tutorial-end-to-end/: index.html
tutorial-hosted-agent/: index.html
tutorial-hosted-agent-quickstart/: index.html
tutorial-http-agent/: index.html
tutorial-prompt-agent-quickstart/: index.html
tutorials/: index.html
(+355 files in other folders)
