[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentops-toolkit"
version = "0.1.1"
description = "AgentOps CLI for standardized evaluation workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1.0",
  "pydantic>=2,<3",
  "ruamel.yaml>=0.18,<1.0",
]
license = { file = "LICENSE" }

[project.scripts]
agentops = "agentops.cli.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agentops.templates" = [
  "config.yaml",
  "run.yaml",
  "run-rag.yaml",
  "run-agent.yaml",
  ".gitignore",
  "bundles/*.yaml",
  "datasets/*.yaml",
  "data/*.jsonl",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]
